# tood

./: .gitignore  Cargo.toml  FEATURES.md  Makefile  README.md  todos.toml
.github/workflows/: release.yml
media/: demo.tape
src/: app.rs  config.rs  keymap.rs  main.rs  types.rs  ui.rs
src/components/: app.rs  due_date.rs  hint_bar.rs  metadata.rs  mod.rs  notification.rs  skimmer.rs  todo_input.rs  todo_list.rs  utils.rs
src/keys/: key_config.rs  keymap.rs  mod.rs
src/theme/: mod.rs  theme.rs  theme_config.rs
src/types/: app.rs  metadata.rs  mod.rs  notification.rs  skimmer.rs  todo_list.rs  utils.rs
src/ui/: hint_bar.rs  mod.rs  notification.rs  utils.rs  views.rs
src/widgets/: calendar.rs  hint_bar.rs  mod.rs  scrollbar.rs  time_picker.rs
src/widgets/calendar/: mod.rs  month.rs  state.rs  widget.rs
src/widgets/stateful_paragraph/: mod.rs  paragraph.rs  text.rs
