[package]
name = "projman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
crossterm = "0.25.0"
dirs-next = "2.0.0"
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
tui = "0.19.0"
