[package]
name = "tood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
# confy = "0.5.0"
crossterm = "0.25.0"
edit = "0.1.4"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
tui = "0.19.0"
tui-input = "0.5.1"

[dependencies.confy]
git = "https://github.com/mWalrus/confy"
default-features = false
features = ["ron_conf"]