[package]
name = "tood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
crossterm = { version = "0.25.0", features = ["serde"] }
edit = "0.1.4"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
tui = { version = "0.19.0", features = ["serde"] }
tui-input = "0.5.1"
kanal = { version = "0.1.0-pre6" }
anyhow = "1.0.65"
dhat = { version = "0.3", optional = true }
tui-utils = { git = "https://github.com/mWalrus/tui-utils" }
unicode-width = "0.1.10"

[dependencies.confy]
version = "0.5"
default-features = false
features = ["ron_conf"]

[features]
default = []
dhat-heap = ["dhat"]

[profile.release]
debug = 1
